--- a/app/src/main/res/layout/activity_parity_details.xml
+++ b/app/src/main/res/layout/activity_parity_details.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/parity_list"
+        android:id="@+id/lv_parity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
