--- a/app/src/main/res/layout-land/activity_parity_details.xml
+++ b/app/src/main/res/layout-land/activity_parity_details.xml
@@ -15,7 +15,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="@string/parity_baby_name"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="DOB"
+                android:text="@string/parity_dob"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -33,7 +33,7 @@
             <TextView
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
-                android:text="Hospital Number"
+                android:text="@string/parity_hospital_number"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Gestation"
+                android:text="@string/parity_gestation"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -51,7 +51,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:text="Gender"
+                android:text="@string/parity_gender"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -60,7 +60,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Weight(g)"
+                android:text="@string/parity_weight"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -69,7 +69,7 @@
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Mode"
+                android:text="@string/parity_mode_of_birth"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -78,7 +78,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Outcome"
+                android:text="@string/parity_birth_outcome"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -87,7 +87,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Hearing"
+                android:text="@string/parity_hearing"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -96,7 +96,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="NBST"
+                android:text="@string/parity_nbst"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -105,7 +105,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Vitamin K"
+                android:text="@string/parity_vit_k"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_Xsmall"
@@ -113,7 +113,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_recycler"
+            android:id="@+id/rv_parity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
