--- a/app/src/main/res/layout-land/parity_list_layout.xml
+++ b/app/src/main/res/layout-land/parity_list_layout.xml
@@ -5,77 +5,77 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/tv_parity_name"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/dob_parity"
+        android:id="@+id/tv_parity_dob"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/hospital_number"
+        android:id="@+id/tv_parity_hospital_number"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/gestation_parity"
+        android:id="@+id/tv_parity_gestation"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/gender_parity"
+        android:id="@+id/tv_parity_gender"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/weight_parity"
+        android:id="@+id/tv_parity_weight"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/mode_of_birth_parity"
+        android:id="@+id/tv_parity_birth_mode"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/birth_outcome_parity"
+        android:id="@+id/tv_parity_outcome"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/birth_hearing"
+        android:id="@+id/tv_parity_hearing"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/birth_nbst"
+        android:id="@+id/tv_parity_nbst"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/text_small" />
 
     <TextView
-        android:id="@+id/birth_vit_k"
+        android:id="@+id/tv_parity_vit_k"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
