--- a/app/src/main/res/layout/activity_appointment_calendar.xml
+++ b/app/src/main/res/layout/activity_appointment_calendar.xml
@@ -9,7 +9,7 @@
         android:gravity="center_horizontal" >
 
         <Button
-            android:id="@+id/prev_button"
+            android:id="@+id/btn_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -17,7 +17,7 @@
             android:textSize="@dimen/text_Xsmall" />
 
         <Button
-            android:id="@+id/date_button"
+            android:id="@+id/btn_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -27,7 +27,7 @@
             android:textSize="@dimen/text_Xsmall" />
 
         <Button
-            android:id="@+id/next_button"
+            android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
