--- a/app/src/main/res/layout/activity_confirm_appointment.xml
+++ b/app/src/main/res/layout/activity_confirm_appointment.xml
@@ -12,97 +12,91 @@
         android:paddingLeft="@dimen/padding_Xsmall" >
 
         <TextView
-            android:id="@+id/text_service_user"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:text="@string/appointment_for"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_confirm_user"
+            android:id="@+id/tv_confirm_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_Xsmall"
-            android:textSize="@dimen/text_small"
+            android:textSize="@dimen/text_medium"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/text_appt_location"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:text="@string/to_attend"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_confirm_appt_location"
+            android:id="@+id/tv_confirm_location"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_Xsmall"
-            android:textSize="@dimen/text_small"
+            android:textSize="@dimen/text_medium"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/text_appt_time"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:text="@string/at"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_confirm_appt_time"
+            android:id="@+id/tv_confirm_time"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_Xsmall"
-            android:textSize="@dimen/text_small"
+            android:textSize="@dimen/text_medium"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/text_email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:text="@string/confirm_email"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_confirm_email"
+            android:id="@+id/tv_confirm_email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_Xsmall"
-            android:textSize="@dimen/text_small"
+            android:textSize="@dimen/text_medium"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/text_sms"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:text="@string/confirm_sms"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_confirm_sms"
+            android:id="@+id/tv_confirm_sms"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_Xsmall"
-            android:textSize="@dimen/text_small"
+            android:textSize="@dimen/text_medium"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/text_create_question"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_large"
             android:text="@string/book_question"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -112,7 +106,7 @@
             android:weightSum="1.0" >
 
             <Button
-                android:id="@+id/btn_yes_appointment"
+                android:id="@+id/btn_confirm_yes"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/padding_Xsmall"
@@ -123,7 +117,7 @@
                 android:text="@string/book" />
 
             <Button
-                android:id="@+id/btn_no_appointment"
+                android:id="@+id/btn_confirm_no"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/padding_Xsmall"
