--- a/app/src/main/res/layout/activity_create_appointment.xml
+++ b/app/src/main/res/layout/activity_create_appointment.xml
@@ -27,7 +27,7 @@
             android:weightSum="1.0" >
 
             <EditText
-                android:id="@+id/edit_service_user"
+                android:id="@+id/et_service_user"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -101,14 +101,14 @@
             android:textStyle="bold" />
 
         <Spinner
-            android:id="@+id/visit_return_type_spinner"
+            android:id="@+id/spnr_visit_return_type"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:entries="@array/visit_return_type"
             android:spinnerMode="dialog"/>
 
         <Spinner
-            android:id="@+id/visit_return_type_spinner_select"
+            android:id="@+id/spnr_visit_return_type_select"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:entries="@array/visit_return_type"
@@ -123,13 +123,13 @@
             android:textStyle="bold" />
 
         <Spinner
-            android:id="@+id/visit_priority_spinner"
+            android:id="@+id/spnr_visit_priority"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:entries="@array/visit_priority_list" />
 
         <Spinner
-            android:id="@+id/visit_priority_spinner_select"
+            android:id="@+id/spnr_visit_priority_select"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:entries="@array/visit_return_type"
