--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,6 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
@@ -68,7 +67,7 @@
         android:weightSum="3.0">
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/et_username"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -83,7 +82,7 @@
             android:textColorHint="#A9A9A9" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/et_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/padding_medium"
@@ -97,7 +96,7 @@
             android:textColorHint="#A9A9A9" />
 
         <Button
-            android:id="@+id/login"
+            android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/padding_large"
@@ -124,7 +123,7 @@
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/about"
+            android:id="@+id/tv_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
