--- a/app/src/main/res/layout/activity_post_natal.xml
+++ b/app/src/main/res/layout/activity_post_natal.xml
@@ -1,17 +1,16 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -27,10 +26,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
                 android:padding="@dimen/padding_natal"
-                android:weightSum="1.0" >
+                android:weightSum="1.0">
 
                 <TextView
-                    android:id="@+id/birth_mode"
+                    android:id="@+id/tv_post_mode"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.3"
@@ -53,10 +52,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/perineum"
+                    android:id="@+id/tv_post_perineum"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -77,10 +76,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/anti_d"
+                    android:id="@+id/tv_post_anti_d"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -102,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
                 android:padding="@dimen/padding_natal"
-                android:weightSum="1.0" >
+                android:weightSum="1.0">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -120,7 +119,7 @@
                     android:layout_weight="0.9" />
 
                 <ImageView
-                    android:id="@+id/midwives_notes"
+                    android:id="@+id/tv_post_midwives_notes"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:adjustViewBounds="true"
@@ -133,7 +132,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -150,10 +149,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
                 android:padding="@dimen/padding_natal"
-                android:weightSum="1.0" >
+                android:weightSum="1.0">
 
                 <TextView
-                    android:id="@+id/date_of_delivery"
+                    android:id="@+id/tv_post_delivery_date"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.45"
@@ -176,10 +175,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/time_of_delivery"
+                    android:id="@+id/tv_post_delivery_time"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -200,10 +199,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/days_since_birth"
+                    android:id="@+id/tv_post_days_since_birth"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -224,10 +223,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/sex_of_baby"
+                    android:id="@+id/tv_post_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -248,10 +247,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/birth_weight"
+                    android:id="@+id/tv_post_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -272,10 +271,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/vitk"
+                    android:id="@+id/tv_post_vit_k"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -296,10 +295,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/hearing"
+                    android:id="@+id/tv_post_hearing"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -320,10 +319,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/feeding"
+                    android:id="@+id/tv_post_feeding"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -344,10 +343,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal" >
+                android:padding="@dimen/padding_natal">
 
                 <TextView
-                    android:id="@+id/nbst"
+                    android:id="@+id/tv_post_nbst"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceLarge"
