--- a/app/src/main/res/layout/activity_quick_menu.xml
+++ b/app/src/main/res/layout/activity_quick_menu.xml
@@ -7,7 +7,7 @@
     android:weightSum="4.0">
 
     <Button
-        android:id="@+id/patientSearch"
+        android:id="@+id/btn_patient_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_small"
@@ -16,7 +16,7 @@
         android:textSize="@dimen/text_large" />
 
     <Button
-        android:id="@+id/bookAppointment"
+        android:id="@+id/btn_book_appointment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_small"
@@ -25,7 +25,7 @@
         android:textSize="@dimen/text_large" />
 
     <Button
-        android:id="@+id/start_stop_clinic"
+        android:id="@+id/btn_clinic_record"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_small"
@@ -34,7 +34,7 @@
         android:textSize="@dimen/text_large" />
 
     <Button
-        android:id="@+id/todays_appointments"
+        android:id="@+id/btn_todays_appointments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
