--- a/app/src/main/res/layout/activity_today_appointment.xml
+++ b/app/src/main/res/layout/activity_today_appointment.xml
@@ -7,13 +7,8 @@
     <ListView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list">        
+        android:id="@+id/lv_today_appointment">
     </ListView>
-    
-    <TextView 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_1"/>
 
 </LinearLayout>
 
