--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -13,7 +13,7 @@
     <!-- The navigation drawer -->
 
     <ListView
-        android:id="@+id/left_drawer"
+        android:id="@+id/lv_nav_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
